--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         </div>
       </div>
             <div class="span9">
+
+      
       <h1 id="resources-for-learning-math">Resources for Learning Math</h1>
 <h2 id="objective">Objective</h2>
 <p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally, and so the following course seems the most beneficial toward this aim.</p>
@@ -101,7 +103,10 @@
 <p><strong>Step 4: Learn probability theory</strong></p>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
-<li><a href="https://math.stackexchange.com/questions/901622/single-variable-calculus-reference-recommendations">List of resources for single variable calculus</a></li>
+<li><a href="https://math.stackexchange.com/questions/901622/single-variable-calculus-reference-recommendations">List of resources for single variable calculus</a>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=fYyARMqiaag&amp;list=PLF797E961509B4EB5">YouTube Lectures Calc 1 (Professor Leonard)</a></li>
+</ul></li>
 <li><a href="https://www.reddit.com/r/math/comments/2mkmk0/a_compilation_of_useful_free_online_math_resources/">Large list of free learning resources for math generally</a></li>
 <li><a href="https://www.jarad.me/courses/">Open resources for various stat courses taught by one person (Jarad Niemi) at Iowa State University</a></li>
 <li>Courses in probability theory:
