--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
         </div>
       </div>
             <div class="span9">
-
-      
       <h1 id="resources-for-learning-math">Resources for Learning Math</h1>
 <h2 id="objective">Objective</h2>
 <p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally, and so the following course seems the most beneficial toward this aim.</p>
@@ -87,6 +85,13 @@
 <h2 id="approach">Approach</h2>
 <p>I see probability theory as being a foundation upon which the other types of math I’m interested rest, so my primary aim will be to start by trying to really grasp probability theory. I see the major prerequisites of probability theory being calculus and linear algebra. I’ll start with calculus, move to linear algebra, then to probability theory and beyond.</p>
 <h3 id="progress">Progress</h3>
+<p><strong>Step 0: Brush up on the basics</strong></p>
+<ul>
+<li>Professor Leonard on YouTube
+<ul>
+<li>See <a href="basics/leonard">notes</a></li>
+</ul></li>
+</ul>
 <p><strong>Step 1: Learn single variable calculus</strong></p>
 <ul>
 <li>Get a foundation in real analysis
