Organization and intro to functions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <li><a href="#objective">Objective</a></li>
         <li><a href="#approach">Approach</a>
         <ul>
-        <li><a href="#progress">Progress</a></li>
+        <li><a href="#cirriculum">Cirriculum</a></li>
         </ul></li>
         <li><a href="#links-resources">Links &amp; Resources</a></li>
         </ul></li>
@@ -80,19 +80,20 @@
             <div class="span9">
       <h1 id="resources-for-learning-math">Resources for Learning Math</h1>
 <h2 id="objective">Objective</h2>
-<p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally, and so the following course seems the most beneficial toward this aim.</p>
+<p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally. A concrete example of an objective I’d like to achieve is to be able to thoroughly understand something like Chapter 5 of <a href="bates_mixed_models.pdf">this</a> text on mixed models.</p>
 <p>I’m making this directory public in the hopes that documenting my math adventures might be of benefit to others.</p>
 <h2 id="approach">Approach</h2>
-<p>I see probability theory as being a foundation upon which the other types of math I’m interested rest, so my primary aim will be to start by trying to really grasp probability theory. I see the major prerequisites of probability theory being calculus and linear algebra. I’ll start with calculus, move to linear algebra, then to probability theory and beyond.</p>
-<h3 id="progress">Progress</h3>
-<p><strong>Step 0: Brush up on the basics</strong></p>
+<p>I anticipate this being a long road. The intention is to deeply learn the needed mathematical fundamentals to lay a solid foundation for mastering the more complex modeling topics.</p>
+<p>I see probability theory as being a foundation upon which the other types of math I’m interested in rest, so my primary aim will be to start by trying to really master probability theory. I see the major prerequisites of probability theory being calculus and linear algebra. I’ll start with calculus, move to linear algebra, then to probability theory and beyond.</p>
+<h3 id="cirriculum">Cirriculum</h3>
+<p><strong>Phase 0: Brush up on the basics</strong></p>
 <ul>
 <li>Professor Leonard on YouTube
 <ul>
 <li>See <a href="basics/leonard">notes</a></li>
 </ul></li>
 </ul>
-<p><strong>Step 1: Learn single variable calculus</strong></p>
+<p><strong>Phase 1: Study single variable calculus</strong></p>
 <ul>
 <li>Get a foundation in real analysis
 <ul>
@@ -103,9 +104,9 @@
 </ul></li>
 <li>Work through Spivak’s <em>Calculus</em> concurrently with taking the MIT open course on <a href="https://ocw.mit.edu/courses/18-01sc-single-variable-calculus-fall-2010/pages/syllabus/">single variable calculus.</a></li>
 </ul>
-<p><strong>Step 2: Learn multivariable calculus</strong></p>
-<p><strong>Step 3: Learn linear algebra</strong></p>
-<p><strong>Step 4: Learn probability theory</strong></p>
+<p><strong>Phase 2: Study multivariable calculus</strong></p>
+<p><strong>Phase 3: Study linear algebra</strong></p>
+<p><strong>Phase 4: Study probability theory</strong></p>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
 <li><a href="https://math.stackexchange.com/questions/901622/single-variable-calculus-reference-recommendations">List of resources for single variable calculus</a>
