Starting completeness in abbott

--- a/index.html
+++ b/index.html
@@ -88,19 +88,13 @@
 <h3 id="cirriculum">Cirriculum</h3>
 <p><strong>Phase 0: Brush up on the basics</strong></p>
 <ul>
-<li>Professor Leonard on YouTube
-<ul>
-<li>See <a href="basics/leonard">notes</a></li>
-</ul></li>
+<li>Professor Leonard on YouTube (<a href="basics/leonard">notes</a>)</li>
 </ul>
 <p><strong>Phase 1: Study single variable calculus</strong></p>
 <ul>
 <li>Get a foundation in real analysis
 <ul>
-<li>Work through Chapter 1 of Abbott’s <em>Understanding Analysis</em>
-<ul>
-<li>See <a href="real-analysis/abbott_notes.pdf">notes</a></li>
-</ul></li>
+<li>Work through Chapter 1 of Abbott’s <em>Understanding Analysis</em> (<a href="real-analysis/">notes</a>)</li>
 </ul></li>
 <li>Work through Spivak’s <em>Calculus</em> concurrently with taking the MIT open course on <a href="https://ocw.mit.edu/courses/18-01sc-single-variable-calculus-fall-2010/pages/syllabus/">single variable calculus.</a></li>
 </ul>
