Finish Leonard's functions

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 <li><a href="https://castel.dev/post/lecture-notes-1/">Workflow for math note taking</a></li>
 <li><a href="https://www.reddit.com/r/learnmath/comments/bbza6p/what_is_the_best_way_to_teach_myself_math/">Long thread on approaches to learning math</a></li>
 <li><a href="https://reddit.com/r/learnmath">r/learnmath</a></li>
+<li><a href="http://andrusia.com/math/">Adventures in Mathematics</a>
+<ul>
+<li>Came recommended from <a href="https://www.thegreatstatsby.com/posts/2021-03-08-ml-prospect/">this</a> stats blog.</li>
+</ul></li>
 </ul>
             </div>
     </div>
