--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 <ul>
 <li>Came recommended from <a href="https://www.thegreatstatsby.com/posts/2021-03-08-ml-prospect/">this</a> stats blog.</li>
 </ul></li>
+<li><a href="https://www.cantorsparadise.com/the-two-schools-of-probability-theory-76d0c0c8198d">A good discussion of Jaynes vs. Kolomogorov</a></li>
 </ul>
             </div>
     </div>
