--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 </ul></li>
 <li><a href="https://www.cantorsparadise.com/the-two-schools-of-probability-theory-76d0c0c8198d">A good discussion of Jaynes vs. Kolomogorov</a></li>
 <li><a href="https://www.youtube.com/@wcwou/videos">Huge repository of math lectures</a></li>
+<li><a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm#e%3acalculus">Annotated bibliography of math textbooks from Berkeley</a></li>
 </ul>
             </div>
     </div>
