--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         </div>
       </div>
             <div class="span9">
+
+      
       <h1 id="resources-for-learning-math">Resources for Learning Math</h1>
 <h2 id="objective">Objective</h2>
 <p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally. A concrete example of an objective I’d like to achieve is to be able to thoroughly understand something like Chapter 5 of <a href="bates_mixed_models.pdf">this</a> text on mixed models.</p>
@@ -123,6 +125,10 @@
 <li><a href="https://www.cantorsparadise.com/the-two-schools-of-probability-theory-76d0c0c8198d">A good discussion of Jaynes vs. Kolomogorov</a></li>
 <li><a href="https://www.youtube.com/@wcwou/videos">Huge repository of math lectures</a></li>
 <li><a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm#e%3acalculus">Annotated bibliography of math textbooks from Berkeley</a></li>
+<li><a href="https://www.stat.cmu.edu/~cshalizi/mreg/15/">Course on regression grounded in mathematical concepts like PDFs and likelihood functions</a>
+<ul>
+<li>See especially <a href="https://www.stat.cmu.edu/~cshalizi/mreg/15/lectures/04/lecture-04.pdf">here</a> for a deriva*tion of a likelihood function of a simple regression equation.</li>
+</ul></li>
 </ul>
             </div>
     </div>
