--- a/basics/leonard/index.html
+++ b/basics/leonard/index.html
@@ -85,6 +85,7 @@
 <li>Lecture 0.2: Functions (<a href="https://www.youtube.com/watch?v=1EGFSefe5II&amp;list=PLF797E961509B4EB5&amp;index=2">video</a>, <a href="0.2_functions/functions.pdf">notes</a>).</li>
 <li>Lecture 0.3: Review of Trigonometry and Graphing Trigonometric Functions (<a href="https://www.youtube.com/watch?v=SzLF-wLZF_I&amp;list=PLF797E961509B4EB5&amp;index=3">video</a>, <a href="0.3_trig-graphing/trig-graphing.pdf">notes</a>)</li>
 <li>Lecture 1.1: An Introduction to Limits (<a href="https://www.youtube.com/watch?v=54_XRjHhZzI">video</a>, <a href="1.1_limits/limits.pdf">notes</a>)</li>
+<li>Lecture 1.2: Properties of Limits. Techniques of Limit Computation. (<a href="https://www.youtube.com/watch?v=VSqOZNULRjQ">video</a>, <a href="1.2_limit-properties/limit-properties.pdf">notes</a>)</li>
 </ul>
             </div>
     </div>
