More limit properties

--- a/index.html
+++ b/index.html
@@ -103,27 +103,28 @@
 <p><strong>Phase 4: Study probability theory</strong></p>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
-<li><a href="https://math.stackexchange.com/questions/901622/single-variable-calculus-reference-recommendations">List of resources for single variable calculus</a>
+<li><p>Great youtube account for learning skills related to computational neuroscience: <a href="https://www.youtube.com/watch?v=Wo3Ua3bacvk">here</a></p></li>
+<li><p><a href="https://math.stackexchange.com/questions/901622/single-variable-calculus-reference-recommendations">List of resources for single variable calculus</a></p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=fYyARMqiaag&amp;list=PLF797E961509B4EB5">YouTube Lectures Calc 1 (Professor Leonard)</a></li>
 </ul></li>
-<li><a href="https://www.reddit.com/r/math/comments/2mkmk0/a_compilation_of_useful_free_online_math_resources/">Large list of free learning resources for math generally</a></li>
-<li><a href="https://www.jarad.me/courses/">Open resources for various stat courses taught by one person (Jarad Niemi) at Iowa State University</a></li>
-<li>Courses in probability theory:
+<li><p><a href="https://www.reddit.com/r/math/comments/2mkmk0/a_compilation_of_useful_free_online_math_resources/">Large list of free learning resources for math generally</a></p></li>
+<li><p><a href="https://www.jarad.me/courses/">Open resources for various stat courses taught by one person (Jarad Niemi) at Iowa State University</a></p></li>
+<li><p>Courses in probability theory:</p>
 <ul>
 <li><a href="https://projects.iq.harvard.edu/stat110/home">Harvard Stat110</a></li>
 </ul></li>
-<li><a href="https://castel.dev/post/lecture-notes-1/">Workflow for math note taking</a></li>
-<li><a href="https://www.reddit.com/r/learnmath/comments/bbza6p/what_is_the_best_way_to_teach_myself_math/">Long thread on approaches to learning math</a></li>
-<li><a href="https://reddit.com/r/learnmath">r/learnmath</a></li>
-<li><a href="http://andrusia.com/math/">Adventures in Mathematics</a>
+<li><p><a href="https://castel.dev/post/lecture-notes-1/">Workflow for math note taking</a></p></li>
+<li><p><a href="https://www.reddit.com/r/learnmath/comments/bbza6p/what_is_the_best_way_to_teach_myself_math/">Long thread on approaches to learning math</a></p></li>
+<li><p><a href="https://reddit.com/r/learnmath">r/learnmath</a></p></li>
+<li><p><a href="http://andrusia.com/math/">Adventures in Mathematics</a></p>
 <ul>
 <li>Came recommended from <a href="https://www.thegreatstatsby.com/posts/2021-03-08-ml-prospect/">this</a> stats blog.</li>
 </ul></li>
-<li><a href="https://www.cantorsparadise.com/the-two-schools-of-probability-theory-76d0c0c8198d">A good discussion of Jaynes vs. Kolomogorov</a></li>
-<li><a href="https://www.youtube.com/@wcwou/videos">Huge repository of math lectures</a></li>
-<li><a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm#e%3acalculus">Annotated bibliography of math textbooks from Berkeley</a></li>
-<li><a href="https://www.stat.cmu.edu/~cshalizi/mreg/15/">Course on regression grounded in mathematical concepts like PDFs and likelihood functions</a>
+<li><p><a href="https://www.cantorsparadise.com/the-two-schools-of-probability-theory-76d0c0c8198d">A good discussion of Jaynes vs. Kolomogorov</a></p></li>
+<li><p><a href="https://www.youtube.com/@wcwou/videos">Huge repository of math lectures</a></p></li>
+<li><p><a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm#e%3acalculus">Annotated bibliography of math textbooks from Berkeley</a></p></li>
+<li><p><a href="https://www.stat.cmu.edu/~cshalizi/mreg/15/">Course on regression grounded in mathematical concepts like PDFs and likelihood functions</a></p>
 <ul>
 <li>See especially <a href="https://www.stat.cmu.edu/~cshalizi/mreg/15/lectures/04/lecture-04.pdf">here</a> for a deriva*tion of a likelihood function of a simple regression equation.</li>
 </ul></li>
