--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         <li><a href="#resources-for-learning-math">Resources for Learning Math</a>
         <ul>
         <li><a href="#objective">Objective</a></li>
-        <li><a href="#topics">Topics</a></li>
+        <li><a href="#topics">Topics</a>
+        <ul>
+        <li><a href="#quick-links">Quick links</a></li>
+        </ul></li>
         <li><a href="#links-resources">Links &amp; Resources</a></li>
         </ul></li>
         </ul>
@@ -83,6 +86,13 @@
 <ul>
 <li><a href="notes/calculus">Calculus</a></li>
 <li><a href="notes/probability-theory">Probability Theory</a></li>
+</ul>
+<h3 id="quick-links">Quick links</h3>
+<ul>
+<li><a href="notes/algebra/algebra_basics.pdf">Algebra review notes</a></li>
+<li><a href="notes/calculus/leonard">Professor leonard notes</a></li>
+<li><a href="notes/calculus/spivak/spivak_notes.pdf">Spivak notes</a></li>
+<li><a href="notes/probability-theory/jaynes/jaynes_notes.pdf">Jaynes notes</a></li>
 </ul>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
