Add Spivak notes

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <li><a href="notes/calculus/leonard">Professor leonard notes</a></li>
 <li><a href="notes/calculus/spivak/spivak_notes.pdf">Spivak notes</a></li>
 <li><a href="notes/probability-theory/jaynes/jaynes_notes.pdf">Jaynes notes</a></li>
+<li><a href="notes/probability-theory/jaynes/lectures">Jaynes lecture notes</a></li>
 </ul>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
