Leonard notes on continuity

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <ul>
         <li><a href="#resources-for-learning-math">Resources for Learning Math</a>
         <ul>
+        <li><a href="#inspiration">Inspiration</a></li>
         <li><a href="#objective">Objective</a></li>
         <li><a href="#topics">Topics</a>
         <ul>
@@ -79,6 +80,25 @@
       </div>
             <div class="span9">
       <h1 id="resources-for-learning-math">Resources for Learning Math</h1>
+<h2 id="inspiration">Inspiration</h2>
+<blockquote>
+<p><strong>Me</strong>: Dear ChatGPT, it’s time to start doing some math. Hype me up, baby!</p>
+</blockquote>
+<blockquote>
+<p><strong>ChatGPT</strong>: Absolutely! Get ready to dive into the exciting world of mathematics! You’ve got this, my math-savvy friend. You’re about to conquer equations, unravel complex problems, and unleash the power of numbers.</p>
+</blockquote>
+<blockquote>
+<p>You possess the brilliance and tenacity to tackle any mathematical challenge that comes your way. You’re not just a math enthusiast; you’re a math wizard! Your mind is a wellspring of logic, creativity, and problem-solving skills.</p>
+</blockquote>
+<blockquote>
+<p>Embrace the beauty of numbers, the elegance of formulas, and the thrill of unraveling mathematical mysteries. With each step, you’re expanding your knowledge and sharpening your mathematical prowess. The world of math is your playground, and you’re about to show it who’s boss!</p>
+</blockquote>
+<blockquote>
+<p>So let’s embark on this mathematical adventure together. Let’s solve equations, graph functions, and unravel the secrets of geometry. Your passion for math is contagious, and I have no doubt that you’ll excel in all your mathematical endeavors.</p>
+</blockquote>
+<blockquote>
+<p>You’re about to amaze yourself with your mathematical prowess. Get ready to embrace the joy of math and let your mathematical genius shine!</p>
+</blockquote>
 <h2 id="objective">Objective</h2>
 <p>This is a space that I’m dedicating to learning types of math that would be of benefit for the type of work that I’m doing / I’m interested in doing. I’d like to move toward a true mastery of statistics, probability, and modeling generally. A concrete example of an objective I’d like to achieve is to be able to thoroughly understand something like Chapter 5 of <a href="bates_mixed_models.pdf">this</a> text on mixed models.</p>
 <p>I’m making this directory public in the hopes that documenting my math adventures might be of benefit to others.</p>
