--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <li><a href="#topics">Topics</a>
         <ul>
         <li><a href="#quick-links">Quick links</a></li>
+        <li><a href="#for-the-future">For the future</a></li>
         </ul></li>
         <li><a href="#links-resources">Links &amp; Resources</a></li>
         </ul></li>
@@ -115,9 +116,18 @@
 <li><a href="notes/probability-theory/jaynes/jaynes_notes.pdf">Jaynes notes</a></li>
 <li><a href="notes/probability-theory/jaynes/lectures">Jaynes lecture notes</a></li>
 </ul>
+<h3 id="for-the-future">For the future</h3>
+<ul>
+<li>Linear algebra</li>
+<li>Mathematical statistics
+<ul>
+<li>See <a href="texts_pub/statistics/shalizi_TaLR.pdf">this</a> text on linear regression and <a href="texts_pub/statistics/shalizi_ADA.pdf">this</a> text on advanced data analysis.</li>
+</ul></li>
+</ul>
 <h2 id="links-resources">Links &amp; Resources</h2>
 <ul>
 <li><p>Great youtube account for learning skills related to computational neuroscience: <a href="https://www.youtube.com/watch?v=Wo3Ua3bacvk">here</a></p></li>
+<li><p><a href="https://www.stat.cmu.edu/~cshalizi/ADAfaEPoV/ADAfaEPoV.pdf">Amazing mathematically rigorous textbook on data analysis</a></p></li>
 <li><p><a href="https://tutorial.math.lamar.edu/">Paul’s Online Notes</a></p>
 <ul>
 <li>Really great resource of notes and exercises.</li>
